--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="http://http://shimasho-shimada.5374.jp/img/1apple-touch-icon-precomposed.png" />
     <meta name="Keywords" content="島田市,島田商業,5374,ごみ,ゴミ収集日" />
     <meta name="description" content="Code for Kanazawaの作った5374.jpは貴方の地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
-    <title>5374(ｺﾞﾐﾅｼ).jp島田版</title>
+    <title>5374(ｺﾞﾐﾅｼ).jp御前崎市版</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
     <link rel="apple-touch-icon-precomposed" href="img/1apple-touch-icon-precomposed.png" />
@@ -17,7 +17,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
     <link href="css/custom.css" rel="stylesheet" media="screen" />
   </head>
-  <p><h3>５３７４アプリ　島田版</h3></p>
+  <p><h3>５３７４アプリ　御前崎版</h3></p>
   <p>掲載がないものについては「ごみカレンダーを参照いただくか、<a href="tel:0547353744" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境課(３５－３７４４)</a>までお問い合わせください。」</p>
   川根地区の古紙回収は下記の<FONT color=#0000ff>古紙回収<川根地区></FONT>を参考に出してください。
   <body>
