--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <meta property="og:title" content="5374.jp島田版" />
+    <meta property="og:title" content="5374.jp御前崎版" />
     <meta property="og:type" content="product" />
     <meta property="og:url" content="http://shimasho-shimada.5374.jp/" />
     <meta property="og:description" content="Code for Kanazawaの作った5374.jpは貴方の地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
     <meta property="og:image" content="http://http://shimasho-shimada.5374.jp/img/1apple-touch-icon-precomposed.png" />
-    <meta name="Keywords" content="島田市,島田商業,5374,ごみ,ゴミ収集日" />
+    <meta name="Keywords" content="御前崎市,島田商業,5374,ごみ,ゴミ収集日" />
     <meta name="description" content="Code for Kanazawaの作った5374.jpは貴方の地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
     <title>5374(ｺﾞﾐﾅｼ).jp御前崎市版</title>
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -19,7 +19,6 @@
   </head>
   <p><h3>５３７４アプリ　御前崎版</h3></p>
   <p>掲載がないものについては「ごみカレンダーを参照いただくか、<a href="tel:0547353744" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境課(３５－３７４４)</a>までお問い合わせください。」</p>
-  川根地区の古紙回収は下記の<FONT color=#0000ff>古紙回収<川根地区></FONT>を参考に出してください。
   <body>
   <style id="accordion-style" type="text/css"></style>
   <div id="accordion"></div>
@@ -28,48 +27,22 @@
   <div class="accordion-group-top">
       <div class="accordion-heading">
        <FONT color=#0000ff><p><h5>タップまたはクリックで地域を選択してください。</h5></p></FONT>
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_1">収集しないもの</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_1">特別な「ゴミ」の受付日</a>
       </div>
       <div id="collapse3_1" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h4>あ</h4>
-              <li>アスベスト含有物</li>
-              <p>専門店にご相談ください</p>
-            <h4>い</h4>
-              <li>衣類乾燥機</li>
-              <p>家電リサイクル対象商品</p>
-            <h4>え</h4>
-              <li>エアコン</li>
-              <p>家電リサイクル対象商品</p>
-            <h4>お</h4>
-              <li>オートバイ（スクーター）</li>
-              <p>二輪車リサイクル対象商品</p>
-            <h4>し</h4>
-              <li>消火器</li>
-              <p>販売店か郵便局へお問い合わせください</p>
-            <h4>せ</h4>
-              <li>洗濯機</li>
-              <p>家電リサイクル対象商品</p>
-            <h4>た</h4>
-              <li>タイヤ</li>
-              <p>専門店にご相談下さい</p>
-            <h4>て</h4>
-              <li>テレビ（液晶含む）</li>
-              <p>家電リサイクル対象商品</p>
-            <h4>と</h4>
-              <li>塗料</li>
-              <p>専門店にご相談下さい</p>
-            <h4>の</h4>
-              <li>農機具</li>
-              <p>専門店にご相談下さい</p>
-              <li>農業用ビニール</li>
-              <p>専門店にご相談下さい</p>
-              <li>農薬</li>
-              <p>専門店にご相談下さい</p>
-            <h4>れ</h4>
-              <li>冷蔵庫・冷凍庫</li>
-              <p>家電リサイクル対象商品</p>
+            <h2>毎月 第４火曜日</h2>
+            <h2>ただし、１２月は２２日（木）</h2>
+              <li>農機具類（草刈機・耕運機・茶刈機など</li>
+              <li>ボイラー</li>
+              <li>温水器</li>
+              <li>オイルヒーター</li>
+              <li>バッテリー</li>
+              <li>マッサージ器</li>
+              <li>ピアノ</li>
+              <li>エレクトーン</li>
+                 など
             </div>
         </div>
       </div>
