--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div id="collapse3_1" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h2>毎月 第４火曜日<br>
-                ただし、１２月は２２日（木）</h2>
+            <FONT color=red><h2>毎月 第４火曜日<br>
+              ただし、１２月は２２日（木）</h2></FONT>
               <li>農機具類（草刈機・耕運機・茶刈機など</li>
               <li>ボイラー</li>
               <li>温水器</li>
