--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
        <FONT color=#0000ff><p><h5>タップまたはクリックで地域を選択してください。</h5></p></FONT>
          <div class="accordion-group-top">
       <div class="accordion-heading">
-       <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_5">集積所には出せないもの</a>
+       <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_5">ゴミ出しのルール</a>
       </div>
       <div id="collapse3_5" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <FONT color=#0000ff>原則自己搬入。自己搬入不可能なものに限り予約<a href="tel:0547353744" style=" color: #000000;text-decoration: underline;" target=”_blank”>(環境課 ３５－３７４４)</a>後戸別収集</FONT>
-            <h4>い</h4>
+            <h4>○事業者が出すごみ（事業系一般廃棄物）は収集しません。
+            直接搬入するか許可業者にお願いしてください。</h4>
+            <h4>○家電リサイクル法の施行により<FONT color=red>「テレビ」「エアコン」「洗濯機」「冷蔵庫」「衣類乾燥機」</FONT>は収集・搬入ができません。購入先またはお近くの電気店へご相談ください。</h4>
               <li>一輪車（運搬用）</li>
               <p>直接搬入（燃えないごみ）又は戸別収集</p>
             <h4>う</h4>
