--- a/index.html
+++ b/index.html
@@ -34,77 +34,12 @@
       <div id="collapse3_5" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
+            <h1><FONT color=red>収集当日の朝８時までに決められた収集場所へ出しましょう!！（祝日も収集を行います。）</FONT></h1>
             <h4>○事業者が出すごみ（事業系一般廃棄物）は収集しません。
             直接搬入するか許可業者にお願いしてください。</h4>
             <h4>○家電リサイクル法の施行により<FONT color=red>「テレビ」「エアコン」「洗濯機」「冷蔵庫」「衣類乾燥機」</FONT>は収集・搬入ができません。購入先またはお近くの電気店へご相談ください。</h4>
-              <li>一輪車（運搬用）</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-            <h4>う</h4>
-              <li>乳母車</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-            <h4>え</h4>
-              <li>エレクトーン</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-            <h4>お</h4>
-              <li>オイルヒーター</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-              <li>オルガン</li>
-              <p>直接搬入（燃えるごみ）又は戸別収集</p>
-            <h4>き</h4>
-              <li>脚立</li>
-              <p>直接搬入（燃えないごみ）または戸別収集</p>
-              <li>キャリア（自動車用）</li>
-              <p>直接搬入（燃えないごみ）または戸別収集</p>
-              <li>鏡台</li>
-              <p>環境課へお問い合わせください</p>
-            <h4>げ</h4>
-              <li>下駄箱</li>
-              <p>直接搬入（燃えるごみ）または戸別収集</p>
-               <h4>こ</h4>
-              <li>米びつ・（大型）</li>
-              <p>直接搬入（燃えないごみ）または戸別収集</p>
-               <h4>さ</h4>
-              <li>サーフボード</li>
-              <p>直接搬入（燃えるごみ）または戸別収集</p>
-              <h4>じ</h4>
-              <li>自転車（電動を含む）</li>除湿機
-              <p>直接搬入（燃えないごみ）または戸別収集</p>
-               <li>除湿機</li>
-              <p>環境課へお問い合わせください</p>
-            <h4>す</h4>
-              <li>スキー板</li>
-              <p>直接搬入（燃えるごみ)又は戸別収集</p>
-            <h4>そ</h4>
-             <li>ソファー</li>
-              <p>直接搬入（燃えるごみ)又は戸別収集</p>
-            <h4>た</h4>
-             <li>耐火金庫</li>
-              <p>直接搬入（燃えないごみ)</p>
-             <li>体温計(水銀式)</li>
-              <p>専門店にご相談ください</p>
-             <li>畳</li>
-              <p>環境課へお問い合わせください</p>
-             <li>たんす</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-            <h4>で</h4>
-             <li>電子ピアノ</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-            <h4>は</h4>
-             <li>パイプベッド</li>
-              <p>直接搬入（燃えないごみ）又は戸別収集</p>
-             <li>柱</li>
-              <p>環境課へお問い合わせください</p>
-            <h4>ぴ</h4>
-             <li>ピアノ</li>
-              <p>専門店にご相談ください</p>
-            <h4>ぶ</h4>
-             <li>ブロック・レンガ</li>
-              <p>直接搬入（ガレキ類）　環境課で指示を受けてください</p>
-            <h4>へ</h4>
-             <li>ベビーベッド</li>
-              <p>直接搬入（燃えるごみ）又は戸別回収</p>
-             <li>便器</li>
-              <p>直接搬入（最終処分場）</p>
+            <h4>○<FONT color=red>アスベスト</FONT>が含まれている製品（外壁材、コンクリート、セメント瓦等）は収集・搬入できません。</h4>
+              
             </div>
         </div>
       </div>
