--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="collapse3_4" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h4>環境保全センター（牧之原市笠名１２１２番地</h4>
+            <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
              <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>電　話(５８ -００４４)</a></p>
              <br>
             <h4>カレンダーの再発行 市役所 環境下水道課</h4>
@@ -77,9 +77,9 @@
            <ul>
               <a href="http://www.edu.pref.shizuoka.jp/shimada-ch/home.nsf/SearchMainView/%E7%89%B9%E8%89%B2%E3%81%82%E3%82%8B%E6%8E%88%E6%A5%AD%E5%AE%9F%E8%B7%B5%C2%A75374.jp?OpenDocument&Category=%E7%89%B9%E8%89%B2%E3%81%82%E3%82%8B%E6%8E%88%E6%A5%AD%E5%AE%9F%E8%B7%B5&SubCategory=5374.jp" style=" color: #000000;text-decoration: underline;" target=”_blank”>特色ある授業実践</a><br />
             </ul>
-          <h4><a href="https://www.city.shimada.shizuoka.jp/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>島田市</a></h4>
+          <h4><a href="http://www.city.omaezaki.shizuoka.jp/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>御前崎市</a></h4>
             <ul>
-              <a href="https://www.city.shimada.shizuoka.jp/kantan/gomi.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a><br />
+              <a href="http://www.city.omaezaki.shizuoka.jp/kurashi/gomi/index.html" style=" color: #000000;text-decoration: underline;" target=”_blank”>ごみ・リサイクル</a><br />
             </ul>
           </div>
         </div>
