--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="accordion-inner">
           <div id="help">
             <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
-             <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>電　話(５８ -００４４)</a></p>
+             <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境保全センター(５８ -００４４)</a></p>
              <br>
             <h4>カレンダーの再発行 市役所 環境下水道課</h4>
              <p><a href="tel:0537851126" style=" color: #000000;text-decoration: underline;" target=”_blank”>市役所（環境下水道課）(８５ -１１２６)</a></p>
