--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </head>
   <table border="2">
   <tr>
-   <td><img src="mishimaru.png" width="83" height="116" ></td>
+   <td><img src="mami.png" width="83" height="116" ></td>
     <td><p><h3>５３７４アプリ　御前崎版</h3></p>
   <p>掲載がないものについては「ごみカレンダーを参照いただくか、<a href="tel:0537851126" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境下水道課(８５－１１２６)</a>までお問い合わせください。」</p></td>
-   <td><img src="mishimaruko.png" width="83" height="116"></td>
+   <td><img src="huu.png" width="83" height="116"></td>
     </tr>
     </table>
   <body>
