--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
             <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
              <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境保全センター(５８ -００４４)</a></p>
              <br>
+             .google-maps {
+position: relative;
+padding-bottom: 250px; /*高さは250pxで固定*/
+height: 0;
+overflow: hidden;
+}
+.google-maps iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100% !important;
+height: 100% !important;
+}<br>
             <h4>カレンダーの再発行 市役所 環境下水道課</h4>
              <p><a href="tel:0537851126" style=" color: #000000;text-decoration: underline;" target=”_blank”>市役所（環境下水道課）(８５ -１１２６)</a></p>
              <br>
