--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@ height: 100%;
             <h4>カレンダーの再発行 市役所 環境下水道課</h4>
              <p><a href="tel:0537851126" style=" color: #000000;text-decoration: underline;" target=”_blank”>市役所（環境下水道課）(８５ -１１２６)</a></p>
              <br>
+             <div class="ggmap"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13130.647187288072!2d138.1281253!3d34.637986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa4e602d572f3b849!2z5b6h5YmN5bSO5biC5b255omA!5e0!3m2!1sja!2sjp!4v1472091081799" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+
           </div>
         </div>
       </div>
