--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
     </div>
     <hr> 
       
+      <div class="accordion-group-top">
+      <div class="accordion-heading">
+       <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">特別な「ごみ」の受付日</a>
+      </div>
+      <div id="collapse3_3" class="accordion-body collapse">
+        <div class="accordion-inner">
+          <div id="help">
+            <h2><FONT color=red>毎月 第４火曜日<br>ただし、１２月２２日（木）</FONT></h2>
+            <li>農機具類（草刈機・耕運機・茶刈機など）</li>
+            <li>ボイラー</li>
+            <li>温水器</li>
+            <li>オイルヒーター</li>
+            <li>バッテリー</li>
+            <li>マッサージ器</li>
+            <li>ピアノ</li>
+            <li>エレクトーン</li>
+              など
+            </div>
+        </div>
+      </div>
+    </div>
+    <hr> 
+    
      <div class="accordion-group-top">
       <div class="accordion-heading">
         <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_4">施設案内</a>
