--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="accordion-inner">
           <div id="help">
             <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
-             <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境保全センター TEL (５８ -００４４)</a></p>
+             <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境保全センター(５８ -００４４)</a></p>
              <br>
 <style>
 .ggmap {
@@ -107,7 +107,7 @@ height: 100%;
              <div class="ggmap"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1641.1574734638327!2d138.18109879204772!3d34.64674827916835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdd4f001755d56515!2z55Kw5aKD5L-d5YWo44K744Oz44K_44O8!5e0!3m2!1sja!2sjp!4v1472089680936" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 			<br>
             <h4>カレンダーの再発行 市役所 環境下水道課</h4>
-             <p><a href="tel:0537851126" style=" color: #000000;text-decoration: underline;" target=”_blank”>市役所（環境下水道課） TEL (８５ -１１２６)</a></p>
+             <p><a href="tel:0537851126" style=" color: #000000;text-decoration: underline;" target=”_blank”>市役所（環境下水道課）(８５ -１１２６)</a></p>
              <br>
              <div class="ggmap"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13130.647187288072!2d138.1281253!3d34.637986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa4e602d572f3b849!2z5b6h5YmN5bSO5biC5b255omA!5e0!3m2!1sja!2sjp!4v1472091081799" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
 
@@ -119,9 +119,9 @@ height: 100%;
     
          <div class="accordion-group-top">
       <div class="accordion-heading">
-        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_3">リンク</a>
+        <a class="accordion-toggle-top" data-toggle="collapse" data-parent="#accordion3" href="#collapse3_6">リンク</a>
       </div>
-      <div id="collapse3_3" class="accordion-body collapse">
+      <div id="collapse3_6" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
            <h4><a href="http://www.edu.pref.shizuoka.jp/shimada-ch/home.nsf/IndexFormView?OpenView" style=" color: #000000;text-decoration: underline;" target=”_blank”>島田商業</a></h4>
