--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
     <link href="css/custom.css" rel="stylesheet" media="screen" />
   </head>
-  <table border="2">
+  <table style="border-style: none; border="2">
   <tr>
    <td><img src="huu.png" width="83" height="116" ></td>
     <td><p><h3>５３７４アプリ　御前崎版</h3></p>
