--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         <div class="accordion-inner">
           <div id="help">
             <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
+            <h4>月曜日～金曜日、<FONT color=red>第２・４日曜日</FONT></h4>
+            <h4>午前８時30分～12時00分、午後１時00分～４時30分<br>
+            ※指定袋で搬入されても料金がかかりますのでご注意ください。</h4>
+            <h4><FONT color=bule>第２・４日曜日が祝日の場合でも直接搬入の受付を行います。</FONT></h4>
+            
              <p><a href="tel:0548580044" style=" color: #000000;text-decoration: underline;" target=”_blank”>環境保全センター(５８ -００４４)</a></p>
              <br>
 <style>
