--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2><FONT color=red>収集当日の朝８時までに決められた収集場所へ出しましょう!！（祝日も収集を行います。）</FONT></h2>
             <h4>○事業者が出すごみ（事業系一般廃棄物）は収集しません。
             直接搬入するか許可業者にお願いしてください。</h4>
-            <h4>○家電リサイクル法の施行により<FONT color=red>「テレビ」「エアコン」「洗濯機」「冷蔵庫」「衣類乾燥機」</FONT>は収集・搬入ができません。購入先またはお近くの電気店へご相談ください。</h4>
+            <h4>○家電リサイクル法の施行により<FONT color=red>「テレビ」「エアコン」「洗濯機」「冷蔵庫」「冷凍庫」「衣類乾燥機」</FONT>は収集・搬入ができません。購入先またはお近くの電気店へご相談ください。</h4>
             <h4>○<FONT color=red>アスベスト</FONT>が含まれている製品（外壁材、コンクリート、セメント瓦等）は収集・搬入できません。</h4>
               
             </div>
@@ -59,7 +59,7 @@
       <div id="collapse3_3" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h2><FONT color=red>毎月 第４火曜日<br>ただし、１２月２２日（木）</FONT></h2>
+            <h2><FONT color=red>毎月 第４火曜日<br>ただし、１２月は２２日（木）</FONT></h2>
             <li>農機具類（草刈機・耕運機・茶刈機など）</li>
             <li>ボイラー</li>
             <li>温水器</li>
@@ -82,8 +82,8 @@
       <div id="collapse3_4" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
-            <h4>月曜日～金曜日、<FONT color=red>第２・４日曜日</FONT></h4>
+            <h4>環境保全センター（牧之原市笠名１２１２番地）</h4><br>
+            <h4>直接搬入の受付日及び時間<br>月曜日～金曜日、<FONT color=red>第２・４日曜日</FONT></h4>
             <h4>午前８時30分～12時00分、午後１時00分～４時30分<br>
             ※指定袋で搬入されても料金がかかりますのでご注意ください。</h4>
             <h4><FONT color=red>第２・４日曜日が祝日の場合でも直接搬入の受付を行います。</FONT></h4>
