--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div id="collapse3_4" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h4>環境保全センター（牧之原市笠名１２１２番地）</h4><br>
+            <h4>環境保全センター（牧之原市笠名１２１２番地）</h4>
             <h4>直接搬入の受付日及び時間<br>月曜日～金曜日、<FONT color=red>第２・４日曜日</FONT></h4>
             <h4>午前８時30分～12時00分、午後１時00分～４時30分<br>
             ※指定袋で搬入されても料金がかかりますのでご注意ください。</h4>
