--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:type" content="product" />
     <meta property="og:url" content="http://shimasho-shimada.5374.jp/" />
     <meta property="og:description" content="Code for Kanazawaの作った5374.jpは貴方の地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
-    <meta property="og:image" content="http://http://shimasho-shimada.5374.jp/img/1apple-touch-icon-precomposed.png" />
+    <meta property="og:image" content="http://http://omaezakishi.5374.jp/img/1apple-touch-icon-precomposed.png" />
     <meta name="Keywords" content="御前崎市,島田商業,5374,ごみ,ゴミ収集日" />
     <meta name="description" content="Code for Kanazawaの作った5374.jpは貴方の地域で、いつ、どのゴミが回収されるのか、簡単に知る事ができます。" />
     <title>5374(ｺﾞﾐﾅｼ).jp御前崎市版</title>
