--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ height: 100%;
         <div class="accordion-inner">
           <div id="help">
            <h4><a href="http://www.edu.pref.shizuoka.jp/shimada-ch/home.nsf/IndexFormView?OpenView" style=" color: #000000;text-decoration: underline;" target=”_blank”>島田商業</a></h4>
-           <p>島田商業高校は島田市のごみについてのオープンデータを公開しています。詳しくはHPをご覧ください。</p>
+           <p>島田商業高校は御前崎市のごみについてのオープンデータを公開しています。詳しくはHPをご覧ください。</p>
            <ul>
               <a href="http://www.edu.pref.shizuoka.jp/shimada-ch/home.nsf/SearchMainView/%E7%89%B9%E8%89%B2%E3%81%82%E3%82%8B%E6%8E%88%E6%A5%AD%E5%AE%9F%E8%B7%B5%C2%A75374.jp?OpenDocument&Category=%E7%89%B9%E8%89%B2%E3%81%82%E3%82%8B%E6%8E%88%E6%A5%AD%E5%AE%9F%E8%B7%B5&SubCategory=5374.jp" style=" color: #000000;text-decoration: underline;" target=”_blank”>特色ある授業実践</a><br />
             </ul>
@@ -170,7 +170,7 @@ Code for Kanazawaでは、先ずは正しいゴミの捨て方に注目しまし
             <p>お住まいの地域を選択することで、ゴミ収集日が自動的に更新されます。</p>
             <div id="caption">
               <h4>提供されるゴミ情報について</h4>
-              <p>島田市が公開しているデータから島田商業が独自に解析し、アプリに実装しました。</p>
+              <p>御前崎市が公開しているデータから島田商業が独自に解析し、アプリに実装しました。</p>
               <h4>ライセンスについて</h4>
               <p>本アプリの著作権はCode for Kanazawaに帰属します。</p>
             </div>
