--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div id="collapse3_3" class="accordion-body collapse">
         <div class="accordion-inner">
           <div id="help">
-            <h2><FONT color=red>毎月 第４火曜日<br>ただし、１２月は２２日（金）</FONT></h2>
+            <h2><FONT color=red>毎月第4火曜日・祝日の場合は翌、水曜日<br>ただし、12月は第3火曜日</FONT></h2>
             <li>農機具類（草刈機・耕運機・茶刈機など）</li>
             <li>ボイラー</li>
             <li>温水器</li>
